# Things-Organizer

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_app.py
Doc/img/: documentation.html
Scripts/: create_tables.txt  execute_all.bat  execute_all.sh  insert_dummy_data.txt
documentation/: database.md  migrations.md  reports.md
migrations/versions/: 001_initial_application_migration.py  84e6473e6aed_.py
scripts/: decode_images.py
things_organizer/: __init__.py  app.py  config.py  constants.py  extensions.py  forms.py  main_app.py  utils.py  views.py
things_organizer/api/: categories.py  storages.py  tags.py  things.py
things_organizer/categories/: forms.py  resources.py
things_organizer/common/: forms.py  models.py  resources.py  routes.py
things_organizer/data_management/: category.py  common.py  storage.py  tag.py  things.py  user.py
things_organizer/db/: __init__.py  db_models.py  errors.py  operations.py
things_organizer/examples/: communicate_with_db.py  data_testing.py
things_organizer/labels/: __init__.py  qr_label.py
things_organizer/login_utils/: __init__.py
things_organizer/reports/: __init__.py  base_report.py  csv_report.py  routes.py  txt_report.py
things_organizer/storages/: forms.py  resources.py
things_organizer/tags/: models.py  resources.py
things_organizer/templates/: 403.html  404.html  _base.html  _blank.html  _footer.html  _header.html  _table.html  (+15 more)
(+45 files in other folders)
