[tool.poetry]
name = "things_organizer"
version = "0.1.0"
description = "Simple and \"lightweight\" web application for organizing that disaster or room/garage/lab (I suppose) we all have."
authors = ["Juan Biondi <juanernestobiondi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
waitress = "^2.1.2"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"
flask-sqlalchemy = "^3.0.0"
Flask-Login = "^0.6.2"
Flask-WTF = "^1.0.1"
Flask-Script = "2.0.5"
Flask-Migrate = "2.6.0"
qrcode = "^7.3.1"
prettytable = "^3.4.1"
Pillow = "^9.2.0"
email-validator = "^1.3.0"
pyzbar = "^0.1.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
pylint = "^2.15.2"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
